Fix blog list category nav letter spacing and margin

--- a/app/assets/stylus/widgets/category-nav.styl
+++ b/app/assets/stylus/widgets/category-nav.styl
@@ -1,8 +1,4 @@
 .category-nav
-    margin-top 40px
-
-    @media screen and ( min-width $screen-md )
-        margin-top 60px
 
     .has-breadcrumb &
         margin-top 0
@@ -24,6 +20,7 @@
             justify-content space-around
 
     .cat-item
+        letter-spacing 2px
         margin 20px 0
 
         @media screen and ( min-width $screen-md )
